# Dashboard-pletorica

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  empresas.sql  ideas para implementar en saas.rtf  migrate_to_modular.py  prompt claude.pages  pyproject.toml  requirements.txt  rxconfig.py
.claude/: mind.mv2
.claude/agents/: backend-architecture-specialist.md  reflex-code-agent.md  reflex-ui-agent.md  ui-ux-designer.md
app/: app.py  config.py
app/api/: README.md  __init__.py  config.py  dependencies.py  main.py
documentacion/: GUIA_NAMING_Y_CONTRATOS_REUSABLES.md  IMSS.ipynb  INSTRUCCIONES_PROTEGER_MODULOS.md  INTEGRACION_PORTAL.md  RLS_VERIFICATION.md
migrations/: 000_create_empresas.sql  001_add_search_indices.sql  001_create_tipos_servicio.sql  002_create_categorias_puesto.sql  002_create_plazas_table.sql  003_create_contratos.sql  004_create_historial_laboral_table.sql  004_create_pagos.sql  005_create_contrato_categorias.sql  007_create_empleados_table.sql  007_create_lugares_entrega.sql  009_create_requisiciones.sql  011_permitir_borradores_requisicion.sql  012_create_archivo_sistema.sql  014_create_sedes_tables.sql  015_create_user_auth_tables.sql  016_apply_rls_business_tables.sql  017_add_employee_restrictions.sql  018_add_reingreso_historial.sql  019_create_entregables_tables.sql  020_alter_pagos_archivo_sistema.sql  021_apply_rls_entregables.sql  022_add_facturacion_estados.sql  023_create_notificaciones.sql  024_add_requisicion_audit_fields.sql  025_add_requisicion_id_to_contratos.sql  026_create_contrato_items.sql  027_add_partida_presupuestal_to_items.sql  028_add_inicio_desde_firma_to_requisiciones.sql  029_add_transferencia_bancaria_to_requisiciones.sql  030_move_partida_fields_to_requisicion.sql  031_ampliar_campos_requisicion.sql  032_numero_requisicion_nullable.sql  033_permisos_granulares.sql  034_add_rol_empresa_to_user_companies.sql  035_extend_empleados_onboarding.sql  036_create_empleado_documentos.sql  037_create_cuenta_bancaria_historial.sql  038_create_configuracion_operativa_empresa.sql  039_pivot_saas_roles.sql  (+11 more)
wip/: README.md  architecture_refactor_plan.md  calculadora_provisiones_anual.py  empresas_page_2.py  payroll.py
(+544 files in other folders)
